--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,16 +25,18 @@ h2{
 hr {
     border: 2px solid red; /*Neste caso, modifica a linha*/
     border-radius: 5px; /*Define o arredondamento existente na borda*/
+    width: 50%;
 }
 
 .button{
-    display: flex;
+    display: inline-block;
     background-color: lightgreen;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     color: white;
     text-decoration: none;
+    margin-bottom: 10px;
 }
  .button:hover{
     color: lightgreen;
