--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,7 @@
 body{
     background-color: rgb(95, 184, 155);
+    font-family:
+
 }
 
 h1 {
@@ -16,6 +18,7 @@ h2{
 .text-properties{
     line-height: 1.5;
     font-size: 18px;
+    font-family: Arial;
 }
 
 .white-text {
