--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,8 +21,8 @@ h2{
     font-family: Arial;
 }
 
-.white-text {
-    color: rgb(255, 0, 0);
+.darkgreen-text {
+    color: rgb(51, 98, 47);
 }
 
 hr {
@@ -73,4 +73,13 @@ hr {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     background-color: #d2ffe2; /*Cor que vai ter essa coluna*/
     text-align: left; /*Alinhamento de texto*/
+}
+
+.ico-properties {
+    max-width: 32px;
+    max-height: 32px;
+}
+
+#center {
+    text-align: center;
 }
